--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <div class="main">
         <div class="head">
             <div class="header">
-                <img src="/images/logo.svg" class="logo">
+                <img src="images/logo.svg" class="logo">
                 <div class="search-nav">
                     <div class="search">
                         <input type="search" class="inputSearch" placeholder="Search">
-                        <button><img src="/images/ico_search.svg"></button>
+                        <button><img src="images/ico_search.svg"></button>
                         <hr>
                     </div>
                     <div class="nav">
@@ -34,46 +34,46 @@
         </div>
             <div class="flex-container">
                 <div class="flex-item">
-                    <img src="/images/vector_1.svg">
+                    <img src="images/vector_1.svg">
                     <p>Wheat</p>
                 </div>
                 <div class="flex-item">
-                    <img src="/images/vector_2.svg">
+                    <img src="images/vector_2.svg">
                     <p>Confection Watermelon</p>
                 </div>
                 <div class="flex-item">
-                    <img src="/images/vector_3.svg">
+                    <img src="images/vector_3.svg">
                     <p>Clover</p>
                 </div>
                 <div class="flex-item">
-                    <img src="/images/vector_4.svg">
+                    <img src="images/vector_4.svg">
                     <p>Confection Sunflower</p>
                 </div>
                 <div class="flex-item">
-                    <img src="/images/vector_5.svg">
+                    <img src="images/vector_5.svg">
                     <p>Tomato</p>
                 </div>
                 <div class="flex-item">
-                    <img src="/images/vector_6.svg">
+                    <img src="images/vector_6.svg">
                     <p>Eggplant P/O</p>
                 </div>
                 <div class="flex-item">
-                    <img src="/images/vector_7.svg">
+                    <img src="images/vector_7.svg">
                     <p>Ornamental Sunflower</p>
                 </div>
             </div>
         <div class="center-page-bg">
             <div class="center-page">
                 <div class="vision">
-                    <img src="/images/card-1.png" width="540px" height="500px" align="right">
+                    <img src="images/card-1.png" width="540px" height="500px" align="right">
                         <h1>Vision</h1>
-                        <img src="/images/union.svg">
+                        <img src="images/union.svg">
                         <p>We believe in long-term growth with an emphasis on the potential of emerging markets. We also support the global need of feeding the growing population.</p>
                 </div>
                 <div class="mission">
-                        <img src="/images/card-2.png" width="540px" height="498px" align="left">
+                        <img src="images/card-2.png" width="540px" height="498px" align="left">
                         <h1>Mission</h1>
-                        <img src="/images/union.svg" style="padding-left: 60px;">
+                        <img src="images/union.svg" style="padding-left: 60px;">
                         <p>Breeding and marketing seeds for advanced field crops and vegetable varieties that provide an added value to all supply chain partners.</p>
                 </div>
             </div>
@@ -81,17 +81,17 @@
         <div class="bottom-page">
             <div class="top-bottom-page">
                 <h1>Argidera's main activities</h1>
-                <center><img src="/images/union.svg"></center>
+                <center><img src="images/union.svg"></center>
             </div>
             <div class="bottom-bottom-page">
                 <div class="flex-item2">
-                    <img src="/images/image 4.png">
+                    <img src="images/image 4.png">
                 </div>
                 <div class="flex-item2">
-                    <img src="/images/image 5.png">
+                    <img src="images/image 5.png">
                 </div>
                 <div class="flex-item2">
-                    <img src="/images/3 1.png">
+                    <img src="images/3 1.png">
                 </div>
             </div>
             <div class="bottom-bottom-page">
@@ -139,11 +139,11 @@
                 <a href="">CONTACT</a>
             </div>
             <div class="flex-item4">
-                <img src="/images/Ico_in.svg" alt="">
-                <img src="/images/Ico_inst.svg" alt="">
-                <img src="/images/Ico_tube.svg" alt="">
-                <img src="/images/Ico_tw.svg" alt="">
-                <img src="/images/Ico_fb.svg" alt="">
+                <img src="images/Ico_in.svg" alt="">
+                <img src="images/Ico_inst.svg" alt="">
+                <img src="images/Ico_tube.svg" alt="">
+                <img src="images/Ico_tw.svg" alt="">
+                <img src="images/Ico_fb.svg" alt="">
             </div>
         </div>
         <div class="footer">
