--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Homepage</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/header-footer.css">
 </head>
 <body>
     <div class="main">
