--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="main">
         <div class="head">
             <div class="header">
-                <img src="images/logo.svg" class="logo">
+                <a href="index.html" class="logo"><img src="images/logo.svg" ></a>
                 <div class="search-nav">
                     <div class="search">
                         <input type="search" class="inputSearch" placeholder="Search">
@@ -21,7 +21,7 @@
                         <hr>
                     </div>
                     <div class="nav">
-                        <a href="">Home</a>
+                        <a href="index.html">Home</a>
                         <a href="">Company Profile</a>
                         <a href="">Products</a>
                         <a href="">Services</a>
@@ -35,32 +35,39 @@
         </div>
             <div class="flex-container">
                 <div class="flex-item">
+                    <a href="">
                     <img src="images/vector_1.svg">
-                    <p>Wheat</p>
+                    <p>Wheat</p></a>
                 </div>
                 <div class="flex-item">
+                    <a href="">
                     <img src="images/vector_2.svg">
-                    <p>Confection Watermelon</p>
+                    <p>Confection Watermelon</p></a>
                 </div>
                 <div class="flex-item">
+                    <a href="">
                     <img src="images/vector_3.svg">
-                    <p>Clover</p>
+                    <p>Clover</p></a>
                 </div>
                 <div class="flex-item">
+                    <a href="">
                     <img src="images/vector_4.svg">
-                    <p>Confection Sunflower</p>
+                    <p>Confection Sunflower</p></a>
                 </div>
                 <div class="flex-item">
+                    <a href="tomato-all.html">
                     <img src="images/vector_5.svg">
-                    <p>Tomato</p>
+                    <p>Tomato</p></a>
                 </div>
                 <div class="flex-item">
+                    <a href="">
                     <img src="images/vector_6.svg">
-                    <p>Eggplant P/O</p>
+                    <p>Eggplant P/O</p></a>
                 </div>
                 <div class="flex-item">
+                    <a href="">
                     <img src="images/vector_7.svg">
-                    <p>Ornamental Sunflower</p>
+                    <p>Ornamental Sunflower</p></a>
                 </div>
             </div>
         <div class="center-page-bg">
