--- a/tomato-all.html
+++ b/tomato-all.html
@@ -12,7 +12,7 @@
 <body>
     <div class="main">
         <div class="header">
-            <img src="images/logo.svg" class="logo">
+            <a href="index.html" class="logo"><img src="images/logo.svg"></a>
             <div class="search-nav">
                 <div class="search">
                     <input type="search" class="inputSearch" placeholder="Search">
@@ -20,7 +20,7 @@
                     <hr>
                 </div>
                 <div class="nav">
-                    <a href="">Home</a>
+                    <a href="index.html">Home</a>
                     <a href="">Company Profile</a>
                     <a href="">Products</a>
                     <a href="">Services</a>
@@ -30,8 +30,149 @@
             </div>    
         </div>
         <img src="images/tomatoAll/bgTomatoAll.png" alt="" width="100%" style="padding-top: 20px;">
-        <div class="conteiner">
+        <div class="conteiner1">
+            <div class="conteiner">
+                <div class="flex-item1">
+                    <h1 class="Maintext"> Agridera Fresh Market Tomato Hybrids</h1>
+                </div>
+                <div class="flex-item1">
+                    <left><img src="images/union.svg" alt="" height="15px"></left>
+                </div>
+                <div class="flex-item1">
+                    <p>Agridera aims to be one of the world's leading companies in the breeding, production, and marketing of tomato seeds. <b> We invest intensively in research and development to provide solutions to growers and consumers in numerous countries around the world.</b>
+                        In particular, we breed improved disease-resistant cultivars adapted to different markets globally.
+                    </p>
+                </div>
+                <div class="flex-item1">
+                    <p>
+                        Currently, emphasis is placed on combining Tomato Yellow Leaf Curl Virus (TYLCV) and Tomato Spotted Wilt Virus (TSWV) resistances with other soil borne diseases into superior tomato breeding lines and hybrids. Moreover, comprehensive efforts are being undertaken to develop varieties resistance to TBRFV virus (Tomato Brown Rugose Fruit Virus).
+                    </p>
+                </div>
+                <div class="flex-item1">
+                    <p>
+                        In terms of horticultural traits, breeding is for earliness, different fruit sizes, firmness, red fruit color, flavor, crack resistance, shelf life, and high/low temperature fruit set. Combinations of quality features and disease resistance are sought in a variety of types, namely round and elongated shapes.
+                    </p>
+                </div>
+                <div class="flex-item1 padd">
+                    <p>Agirdera Tomato breeding programs are focusing on three main segments: Greenhouse Indeterminate Tomatoes, Open-field Indeterminate Tomatoes, and Bush Type Open-field Tomatoes.</p>
+                </div>
+                <div class="flex-item1 full">
+                    <div class="flex-item1-conteiner">
+                        <div class="flex-item-item1">
+                            <h1>Greenhouse Tomato Breeding Program</h1>
+                        </div>
+                        <div class="flex-item-item3">
 
+                        </div>
+                        <div class="flex-item-item2">
+                            <p><b>This breeding is aimed for the Spanish and Turkish markets.</b> For single and cluster picks, round fruit shape and resistances of TYLCV, TSWV, Nematodes and FORL (Fusarium oxysporum f.sp. radicis-lycopersici). Some hybrids may include more resistances, such as Cladosporium and Leveillula Taurica (Lv).</p>  
+                        </div>
+                    </div>
+                    <div class="flex-item1-conteiner">
+                        <div class="flex-item-item1">
+                            <h1>Open-field Indeterminate Tomatoes</h1>
+                        </div>
+                        <div class="flex-item-item3">
+
+                        </div>
+                        <div class="flex-item-item2">
+                            <p><b>This breeding is for Brazilian, Moroccan, and Turkish markets.</b> The main focus is on large round shape fruits (200 grams plus); and resistances of TYLCV, TSWV, Nematodes and FORL. In the near future, F3 (Fusarium oxysporum f.sp. lycopersici) will be included as basic resistance in our cultivars.</p>  
+                        </div>
+                    </div>
+                    <div class="flex-item1-conteiner">
+                        <div class="flex-item-item1">
+                            <h1>Open-field Bush Type Tomatoes</h1>
+                        </div>
+                        <div class="flex-item-item3">
+
+                        </div>
+                        <div class="flex-item-item2">
+                            <p><b>This breeding is for Mediterranean markets.</b> We breed round and elongated shapes, standard sizes (140- 180 grams), and beef sizes (min. 180 grams up to 300 grams and more). We combine the resistances of TYLCV, TSWV and Nematodes as basic resistances in our hybrids. However, some hybrids may include more resistances, such as Cladosporium and Leveillula Taurica (Lv).</p>  
+                        </div>
+                    </div>
+                </div>
+                <div class="flex-item1 padd">
+                    <p><b>Agridera operates through international and local distributers around the world. </b></p>
+                </div>
+                <div class="flex-item1">
+                        <div class="flex-item1-item1 full">
+                            <a href="#">
+                            <img src="images/tomatoAll/tomato1.png" alt="">
+                            <h1>TAG 1000 (TAG 853)</h1>
+                            <p>Tomato Determinate Red Standard Round</p></a>
+                        </div>
+                        <div class="flex-item1-item1 full">
+                            <a href="#">
+                            <img src="images/tomatoAll/tomato2.png" alt="">
+                            <h1>TAG 1001 (TAG 855)</h1>
+                            <p>Tomato Determinate Red Standard Round</p></a>
+                        </div>
+                        <div class="flex-item1-item1 full">
+                            <a href="#">
+                            <img src="images/tomatoAll/tomato3.png" alt="">
+                            <h1>TAG 1002 (TAG 809)</h1>
+                            <p>Tomato Determinate Red Standard Round</p></a>
+                        </div>
+                </div>
+                <div class="flex-item1">
+                    <div class="flex-item1-item1 full">
+                        <a href="#">
+                        <img src="images/tomatoAll/tomato4.png" alt="">
+                        <h1>TAG 1003 (TAG 834)</h1>
+                        <p>Tomato Determinate Red Standard Round</p></a>
+                    </div>
+                    <div class="flex-item1-item1 full">
+                        <a href="#">
+                        <img src="images/tomatoAll/tomato5.png" alt="">
+                        <h1>TAG 1004 (TAG 848)</h1>
+                        <p>Tomato Determinate Red BEEF Round</p></a>
+                    </div>
+                    <div class="flex-item1-item1 full">
+                        <a href="#">
+                        <img src="images/tomatoAll/tomato6.png" alt="">
+                        <h1>TAG 1005 (TAG 800)</h1>
+                        <p>Tomato Determinate Red Standard Round</p></a>
+                    </div>
+                </div>
+                <div class="flex-item1">
+                    <div class="flex-item1-item1 full">
+                        <a href="#">
+                        <img src="images/tomatoAll/tomato7.png" alt="">
+                        <h1>TAG 1006 (TAG 898)</h1>
+                        <p>Tomato Determinate Red Elongated</p></a>
+                    </div>
+                    <div class="flex-item1-item1 full">
+                        <a href="#">
+                        <img src="images/tomatoAll/tomato8.png" alt="">
+                        <h1>TAG 1007 (TAG 816)</h1>
+                        <p>Tomato Determinate Red Elongated</p></a>
+                    </div>
+                    <div class="flex-item1-item1">
+                    </div>
+                </div>
+                <div class="flex-item1"></div>
+            </div>
+        </div>
+        <div class="nav2">
+            <div class="flex-item3">
+                <a href="">PROFILE  </a>
+                <a href="">MANAGEMENT  </a>
+                <a href="">PRODUCTS  </a>
+                <a href="">R&D  </a>
+                <a href="">LINKS  </a>
+                <a href="">SITEMAP  </a>
+                <a href="">CONTACT</a>
+            </div>
+            <div class="flex-item4">
+                <img src="images/Ico_in.svg" alt="">
+                <img src="images/Ico_inst.svg" alt="">
+                <img src="images/Ico_tube.svg" alt="">
+                <img src="images/Ico_tw.svg" alt="">
+                <img src="images/Ico_fb.svg" alt="">
+            </div>
+        </div>
+        <div class="footer">
+            <p style="padding: 20px;">AGRIDERA SEEDS & AGRICULTURE LTD. © 2020</p>
         </div>
     </div>
     
