--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             </div>
         </div>
         <div class="footer">
-            <p style="padding: 20px;">AGRIDERA SEEDS & AGRICULTURE LTD. © 2020</p>
+            <p style="padding: 20px; background-color: #324950; color: #B9B9B9;">AGRIDERA SEEDS & AGRICULTURE LTD. © 2020</p>
         </div>
     </div>
     
