--- a/tomato-all.html
+++ b/tomato-all.html
@@ -57,7 +57,7 @@
                     <p>Agirdera Tomato breeding programs are focusing on three main segments: Greenhouse Indeterminate Tomatoes, Open-field Indeterminate Tomatoes, and Bush Type Open-field Tomatoes.</p>
                 </div>
                 <div class="flex-item1 full">
-                    <div class="flex-item1-conteiner">
+                    <div class="flex-item1-item1">
                         <div class="flex-item-item1">
                             <h1>Greenhouse Tomato Breeding Program</h1>
                         </div>
@@ -68,7 +68,7 @@
                             <p><b>This breeding is aimed for the Spanish and Turkish markets.</b> For single and cluster picks, round fruit shape and resistances of TYLCV, TSWV, Nematodes and FORL (Fusarium oxysporum f.sp. radicis-lycopersici). Some hybrids may include more resistances, such as Cladosporium and Leveillula Taurica (Lv).</p>  
                         </div>
                     </div>
-                    <div class="flex-item1-conteiner">
+                    <div class="flex-item1-item1">
                         <div class="flex-item-item1">
                             <h1>Open-field Indeterminate Tomatoes</h1>
                         </div>
@@ -79,7 +79,7 @@
                             <p><b>This breeding is for Brazilian, Moroccan, and Turkish markets.</b> The main focus is on large round shape fruits (200 grams plus); and resistances of TYLCV, TSWV, Nematodes and FORL. In the near future, F3 (Fusarium oxysporum f.sp. lycopersici) will be included as basic resistance in our cultivars.</p>  
                         </div>
                     </div>
-                    <div class="flex-item1-conteiner">
+                    <div class="flex-item1-item1">
                         <div class="flex-item-item1">
                             <h1>Open-field Bush Type Tomatoes</h1>
                         </div>
@@ -96,56 +96,56 @@
                 </div>
                 <div class="flex-item1">
                         <div class="flex-item1-item1 full">
-                            <a href="#">
+                            <a href="Tomato-One.html">
                             <img src="images/tomatoAll/tomato1.png" alt="">
                             <h1>TAG 1000 (TAG 853)</h1>
-                            <p>Tomato Determinate Red Standard Round</p></a>
+                            <h2>Tomato Determinate Red Standard Round</h2></a>
                         </div>
                         <div class="flex-item1-item1 full">
-                            <a href="#">
+                            <a href="Tomato-One.html">
                             <img src="images/tomatoAll/tomato2.png" alt="">
                             <h1>TAG 1001 (TAG 855)</h1>
-                            <p>Tomato Determinate Red Standard Round</p></a>
+                            <h2>Tomato Determinate Red Standard Round</h2></a>
                         </div>
                         <div class="flex-item1-item1 full">
-                            <a href="#">
+                            <a href="Tomato-One.html">
                             <img src="images/tomatoAll/tomato3.png" alt="">
                             <h1>TAG 1002 (TAG 809)</h1>
-                            <p>Tomato Determinate Red Standard Round</p></a>
+                            <h2>Tomato Determinate Red Standard Round</h2></a>
                         </div>
                 </div>
                 <div class="flex-item1">
                     <div class="flex-item1-item1 full">
-                        <a href="#">
+                        <a href="Tomato-One.html">
                         <img src="images/tomatoAll/tomato4.png" alt="">
                         <h1>TAG 1003 (TAG 834)</h1>
-                        <p>Tomato Determinate Red Standard Round</p></a>
+                        <h2>Tomato Determinate Red Standard Round</h2></a>
                     </div>
                     <div class="flex-item1-item1 full">
-                        <a href="#">
+                        <a href="Tomato-One.html">
                         <img src="images/tomatoAll/tomato5.png" alt="">
                         <h1>TAG 1004 (TAG 848)</h1>
-                        <p>Tomato Determinate Red BEEF Round</p></a>
+                        <h2>Tomato Determinate Red BEEF Round</h2></a>
                     </div>
                     <div class="flex-item1-item1 full">
-                        <a href="#">
+                        <a href="Tomato-One.html">
                         <img src="images/tomatoAll/tomato6.png" alt="">
                         <h1>TAG 1005 (TAG 800)</h1>
-                        <p>Tomato Determinate Red Standard Round</p></a>
+                        <h2>Tomato Determinate Red Standard Round</h2></a>
                     </div>
                 </div>
                 <div class="flex-item1">
                     <div class="flex-item1-item1 full">
-                        <a href="#">
+                        <a href="Tomato-One.html">
                         <img src="images/tomatoAll/tomato7.png" alt="">
                         <h1>TAG 1006 (TAG 898)</h1>
-                        <p>Tomato Determinate Red Elongated</p></a>
+                        <h2>Tomato Determinate Red Elongated</h2></a>
                     </div>
                     <div class="flex-item1-item1 full">
-                        <a href="#">
+                        <a href="Tomato-One.html">
                         <img src="images/tomatoAll/tomato8.png" alt="">
                         <h1>TAG 1007 (TAG 816)</h1>
-                        <p>Tomato Determinate Red Elongated</p></a>
+                        <h2>Tomato Determinate Red Elongated</h2></a>
                     </div>
                     <div class="flex-item1-item1">
                     </div>
@@ -172,7 +172,7 @@
             </div>
         </div>
         <div class="footer">
-            <p style="padding: 20px;">AGRIDERA SEEDS & AGRICULTURE LTD. © 2020</p>
+            <p style="padding: 20px; background-color: #324950; color: #B9B9B9;">AGRIDERA SEEDS & AGRICULTURE LTD. © 2020</p>
         </div>
     </div>
     
