--- a/index.html
+++ b/index.html
@@ -21,12 +21,14 @@
                         <hr>
                     </div>
                     <div class="nav">
-                        <a href="index.html">Home</a>
-                        <a href="">Company Profile</a>
-                        <a href="">Products</a>
-                        <a href="">Services</a>
-                        <a href="">R & D</a>
-                        <a href="">Contact</a>
+                        <div class="nav">
+                            <a href="index.html">Home</a>
+                            <a href="">Company Profile</a>
+                            <a href="tomato-all.html">Products</a>
+                            <a href="">Services</a>
+                            <a href="">R & D</a>
+                            <a href="Contacts-us.html">Contact</a>
+                        </div>
                     </div>
                 </div>    
             </div>
