--- a/Contacts-us.html
+++ b/Contacts-us.html
@@ -22,10 +22,10 @@
                 <div class="nav">
                     <a href="index.html">Home</a>
                     <a href="">Company Profile</a>
-                    <a href="">Products</a>
+                    <a href="tomato-all.html">Products</a>
                     <a href="">Services</a>
                     <a href="">R & D</a>
-                    <a href="">Contact</a>
+                    <a href="Contacts-us.html">Contact</a>
                 </div>
             </div>    
         </div>
