--- a/index.html
+++ b/index.html
@@ -140,13 +140,13 @@
         </div>
         <div class="nav2">
             <div class="flex-item3">
-                <a href="">PROFILE  </a>
+                <a href="index.html">PROFILE  </a>
                 <a href="">MANAGEMENT  </a>
-                <a href="">PRODUCTS  </a>
+                <a href="tomato-all.html">PRODUCTS  </a>
                 <a href="">R&D  </a>
                 <a href="">LINKS  </a>
                 <a href="">SITEMAP  </a>
-                <a href="">CONTACT</a>
+                <a href="Contacts-us.html">CONTACT</a>
             </div>
             <div class="flex-item4">
                 <img src="images/Ico_in.svg" alt="">
