--- a/contactUs.html
+++ b/contactUs.html
@@ -143,9 +143,7 @@
                         <p>You are a</p>
                         <div class="youarea_input">
                             <select name="youarea">
-                                <option value="seed">first producer</option>
-                                <option value="tomato">second producer</option>
-                                <option value="sunflower">third producer</option>
+                                <option value="">first producer</option>
                             </select>
                         </div>
                     </div>
