--- a/tomatoOne.html
+++ b/tomatoOne.html
@@ -70,85 +70,58 @@
             </div>
             </div>
         </header>
-
-
     <section class="tomatoOne">
-        <div class="container-fluid">
+        <div class="container">
             <div class="row">
-                <div class="col-md-6 p-0">
-                    <div class="goBack">
-                        <a href="tomatoAll.html">
-                            <img src="images/tomatoOne/Arrow.svg" alt="arrow">
-                            Return to all tomatoes
-                        </a>
-                    </div>
+                <div class="goBack">
+                    <a href="tomatoAll.html">
+                        <img src="images/tomatoOne/Arrow.svg" alt="arrow">
+                        Return to all tomatoes
+                    </a>
                 </div>
             </div>
+            <div class="row item" v-if="product">
+                <div class="col-lg-6">
+                    <div class="title">
+                        <div class="title__text">
+                            <h1>{{product.title}}</h1>
+                            <h2>{{product.short_text}}</h2>
+                        </div>
+                        <div class="row">
+                            <p class="x"><img src="images/union.svg"></p>
+                        </div>
+                        <div class="row quality">
+                            <div class="col-lg-2">
+                                <img src="images/tomatoOne/quality.svg" alt="quality">
+                            </div>
+                                <div class="col-lg-8">
+                                    <b class="quality__text">Very high yield and excellent fruits quality!</b>
+                                </div>
+                        </div>
 
-            <div class="row">
-                <div class="col-md-6 p-0">
-                    
-
-                    <div class="title2">
-                        <div class="title_text">
-                            <h1>TAG 1002 (TAG 809)</h1>
-                            <h2>Tomato Determinate Red Standard Round</h2>
+                        <div class="row">
+                            <div class="textBlock">
+                                <div class="textBlock_item">
+                                    <h3>DESCRIPTION</h3>
+                                    <img src="images/line.svg" alt="line">
+                                    <p>{{product.desc}}</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
-
-                    <div class="crosses">
-                        <p class="x"><img src="images/union.svg"></p>
-                    </div>
-                    
-                    <div class="row quality">
-                        <div class="col-md-2 p-0">
-                            <img src="images/tomatoOne/quality.svg" alt="quality">
-                        </div>
-                        <div class="col-md-8">
-                            <b class="quality_text">Very high yield and excellent fruits quality!</b>
-                        </div>
-                    </div>
-
-                    <div class="textBlock_item">
-                        <h3>CHARACTERISTICS</h3>
-                        <img src="images/line.svg" alt="line">
-                        <p><b>Resistance</b> <br>   
-                            HR: ToMV:0-2; Fol: 1,2; Ve/Vd;<br>    
-                            IR: TYLCV
-                        </p>
-                    </div>
-                    <div class="textBlock_item">
-                        <h3>Plant</h3>
-                        <img src="images/line.svg" alt="line">
-                        <ul>
-                            <li><span>Strong vigor that provides good leaf coverage.</span></li>
-                            <li><span>Very high productivity with good fruit setting.</span></li>
-                            <li><span>Early matured variety.</span></li>
-                        </ul>
-                    </div>
-                    <div class="textBlock_item">
-                        <h3>Fruit</h3>
-                        <img src="images/line.svg" alt="line">
-                        <ul>
-                            <li><span>Long shelf life on plant and post harvest.</span></li>
-                            <li><span>Nice shiny attractive deep red color.</span></li>
-                            <li><span>Average fruit size: 140 – 160 grams.</span></li>
-                        </ul>
-                    </div>
-
                 </div>
-
-                <div class="col-md-6 p-2">
-                    <div class="tomatoImage"><img src="images/tomatoAll/tomato2.png" alt="tomato"></div>
+                <div class="col-lg-6">
+                    <div class="tomatoImage"><img :src="'images/img/'+product.image" alt="apple"></div>
 
                     <div class="download">
-                        <button><img src="images/tomatoOne/ico_pdf.svg" height="30" alt="pdf"><span>Download PDF</span></button>
+                        <button @click.prevent="addToCart(product.id)" v-if="!btnVisible"><img src="images/shopping-cart.svg" alt="pdf"><span>Add to card</span></button>
+                        <a href="contactUs.html"><button v-if="btnVisible"><img src="images/shopping-cart.svg" alt="cart"><span>Go to card</span></button></a>
                     </div>
 
                     <div class="textBlock_item">
                         <h3>Cycle</h3>
                         <img src="images/line.svg" alt="line">
-                        <br>
+                        <br><b>Resistance</b>
                         <ul>
                             <li><span>Spring</span></li>
                             <li><span>Fall</span></li>
@@ -165,7 +138,6 @@
             </div>
         </div>
     </section>
-
     <section class="footerFirst">
         <div class="container">
             <div class="row">
