--- a/tomatoAll.html
+++ b/tomatoAll.html
@@ -84,7 +84,7 @@
             <div class="row">
                 <div class="title_text">
                     <h1>
-                        Agridera Fresh Market Tomato Hybrids
+                        Agridera Fresh Market Scallion Hybrids
                     </h1>
                 </div>
             </div>
