--- a/tomatoAll.html
+++ b/tomatoAll.html
@@ -252,7 +252,7 @@
                                 <a href="#">SITEMAP</a>
                             </li>
                             <li class="footer_item">
-                                <a href="#">CONTACT</a>
+                                <a href="contactUs.html">CONTACT</a>
                             </li>
                         </ul> 
                     </div>
