--- a/tomatoOne.html
+++ b/tomatoOne.html
@@ -162,7 +162,7 @@
                                 <a href="#">SITEMAP</a>
                             </li>
                             <li class="footer_item">
-                                <a href="#">CONTACT</a>
+                                <a href="contactUs.html">CONTACT</a>
                             </li>
                         </ul> 
                     </div>
