--- a/tomatoAll.html
+++ b/tomatoAll.html
@@ -216,7 +216,7 @@
                 <div class="row">
                     <div class="item col-lg-4 col-md-6" v-if="products" v-for="p in products">
                         <a :href="'tomatoOne.html#'+p.id">
-                            <img :src="'images/img/'+p.image" alt="apple">
+                            <img :src="'images/img/'+p.image" alt="onion">
                             <div class="item_text">
                                 <h2>{{p.title}}</h2>
                                 <p>{{p.short_text}}</p>
