--- a/tomatoOne.html
+++ b/tomatoOne.html
@@ -111,7 +111,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <div class="tomatoImage"><img :src="'images/img/'+product.image" alt="apple"></div>
+                    <div class="tomatoImage"><img :src="'images/img/'+product.image" alt="onion"></div>
 
                     <div class="download">
                         <button @click.prevent="addToCart(product.id)" v-if="!btnVisible"><img src="images/shopping-cart.svg" alt="pdf"><span>Add to card</span></button>
